--- a/src/index.html
+++ b/src/index.html
@@ -6,5 +6,35 @@
 </head>
 <body>
     <div id="mount-point"></div>
+    <script>
+      const transactionDate = new Date(746841601000)
+      const wallets = [
+        {
+          balance: 20,
+          currency: 'USD',
+          history: [
+            {
+              type: 'exchange',
+              fromCurrency: 'EUR',
+              amount: 20,
+              amountInForeignCurrency: 10,
+              timestamp: transactionDate.getTime()
+            },
+            {
+              type: 'top-up',
+              amount: 10,
+              timestamp: transactionDate.getTime()
+            }
+
+          ]
+        },
+        {
+          balance: 2,
+          currency: 'EUR',
+          history: []
+        }
+      ]
+      window.localStorage.setItem('wallets', JSON.stringify(wallets))
+    </script>
 </body>
 </html>
