Add firts 2 tests for exchange screen

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,11 @@
           balance: 2,
           currency: 'EUR',
           history: []
+        },
+        {
+          balance: 3,
+          currency: 'GBP',
+          history: []
         }
       ]
       window.localStorage.setItem('wallets', JSON.stringify(wallets))
